# DVD-simulator

./: .gitignore  App.cpp  App.h  CMakeLists.txt  Canvas.cpp  Canvas.h  ClimberDVD.cpp  ClimberDVD.h  CustomWindow.cpp  CustomWindow.h  DVD.cpp  DVD.h  SideScrollerDVD.cpp  SideScrollerDVD.h  Standard_DVD.cpp  Standard_DVD.h  StatsTracker.cpp  StatsTracker.h  Yessir.csv  dvdsimulator.cpp  dvdsimulator.h  dvdsimulator.ui  main.cpp  wow.ui
